fix: Move Vite to dependencies and update Vercel config
- Move vite and @vitejs/plugin-react to dependencies for Vercel build
- Add explicit build and install commands to vercel.json
- Add postinstall script for better build logging
- This should fix the 'vite: command not found' error in Vercel deployment

--- a/frontend-only/package.json
+++ b/frontend-only/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:check": "tsc --noEmit && vite build",
     "type-check": "tsc --noEmit",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "echo 'Dependencies installed successfully'"
   },
   "keywords": [
     "forza",
@@ -22,23 +23,23 @@
   "dependencies": {
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vite": "^6.3.6"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.9.2",
-    "vite": "^6.3.6"
+    "typescript": "^5.9.2"
   }
 }
