--- a/frontend-only/package.json
+++ b/frontend-only/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:check": "tsc --noEmit && vite build",
+    "build": "npx vite build",
+    "build:check": "tsc --noEmit && npx vite build",
     "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "postinstall": "echo 'Dependencies installed successfully'"
